# tauri-react-starter

./: .gitignore  README.md  biome.json  lefthook.yml  package.json  pnpm-lock.yaml  turbo.json
apps/system/: Cargo.toml  tauri.conf.json
apps/system/src/: main.rs
apps/webview/: index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/webview/src/: App.tsx
